--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "ChatLigg",
+  "name": "MyChat",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server/socketio/socketio.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Rafael Carlos de Souza",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.1",
+    "bootstrap-icons": "^1.5.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "mysql2": "^2.3.0",
     "socket.io": "^4.2.0"
   },
   "devDependencies": {
