--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server/socketio/socketio.js",
-    "dev": "nodemon server.js"
+    "start": " server/socketio/socketio.js",
+    "dev": "nodemon server/server.js"
   },
   "keywords": [],
   "author": "Rafael Carlos de Souza",
@@ -17,7 +17,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
-    "socket.io": "^4.2.0"
+    "sequelize": "^6.6.5",
+    "socket.io": "^4.2.0",
+    "tedious": "^12.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
