--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": " server/socketio/socketio.js",
-    "dev": "nodemon server/server.js"
+    "start": " node server/server.js",
+    "dev": "nodemon server/socketio/socketio.js"
   },
   "keywords": [],
   "author": "Rafael Carlos de Souza",
@@ -19,6 +19,7 @@
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
     "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
     "tedious": "^12.2.0"
   },
   "devDependencies": {
