--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": " node server/server.js",
-    "dev": "nodemon server/socketio/socketio.js"
+    "dev": "nodemon server/socketio/router.js"
   },
   "keywords": [],
   "author": "Rafael Carlos de Souza",
