--- a/models/package.json
+++ b/models/package.json
@@ -18,6 +18,7 @@
     "tedious": "^12.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "sequelize-cli": "^6.2.0"
   }
 }
