--- a/models/package.json
+++ b/models/package.json
@@ -12,6 +12,7 @@
   "author": "Rafael Carlos de Souza",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
