--- a/database/package.json
+++ b/database/package.json
@@ -14,5 +14,8 @@
     "prisma": "^3.3.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^3.3.0"
   }
 }
