--- a/database/package.json
+++ b/database/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": " ts-node-dev --respawn --transpile-only rotas/server.ts "
   },
   "keywords": [],
   "author": "",
@@ -13,9 +13,11 @@
     "@types/node": "^16.11.6",
     "prisma": "^3.3.0",
     "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@prisma/client": "^3.3.0"
+    "@prisma/client": "^3.3.0",
+    "@types/express": "^4.17.13"
   }
 }
