--- a/database/tsconfig.json
+++ b/database/tsconfig.json
@@ -1,5 +1,8 @@
 {
     "compilerOptions": {
+      "target": "ES6",
+      "module": "CommonJS",
+      "noImplicitAny": true, 
       "sourceMap": true,
       "outDir": "dist",
       "strict": true,
