--- a/database/package.json
+++ b/database/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.3.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13"
   }
 }
