--- a/database/package.json
+++ b/database/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": " ts-node-dev --respawn --transpile-only rotas/server.ts "
   },
@@ -11,7 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^16.11.6",
-    "prisma": "^3.3.0",
+    "i": "^0.3.7",
+    "npm": "^8.1.2",
+    "prisma": "^3.4.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
