--- a/database/package.json
+++ b/database/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
-    "dev": " ts-node-dev --respawn --transpile-only rotas/server.ts "
+    "dev": " ts-node-dev --respawn --transpile-only rotas/server.ts ",
+    "start": " node dist/rotas/server.js "
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^3.3.0",
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "gitmoji-cli": "^4.7.0"
   }
 }
