--- a/database/package.json
+++ b/database/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^3.3.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "ejs": "^3.1.6",
     "gitmoji-cli": "^4.7.0"
   }
 }
