--- a/database/package.json
+++ b/database/package.json
@@ -25,6 +25,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "ejs": "^3.1.6",
+    "express": "^4.18.1",
     "gitmoji-cli": "^4.7.0"
   }
 }
