--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "cSpell.words": [
+    "cadatro",
+    "contatos",
+    "logar",
+    "msgss",
+    "msguser",
     "respawn",
     "Souza"
   ]
